# cooldown-guard

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  STARTHERE.md  openforge-spec.md
.github/workflows/: ci.yml
release/: openforge-audit.json
scripts/: setup.sh
src/: cli.rs  db.rs  guard.rs  main.rs  model.rs
tests/: cli.rs
