[package]
name = "cooldown-guard"
version = "0.1.0"
edition = "2024"
description = "Minimum-interval guard for cron jobs and recurring commands"
license = "AGPL-3.0-only"
repository = "https://github.com/GreyforgeLabs/cooldown-guard"
homepage = "https://greyforge.tech"
keywords = ["cli", "cron", "scheduler", "sqlite", "rust"]
categories = ["command-line-utilities"]
rust-version = "1.88"

[dependencies]
anyhow = "=1.0.102"
clap = { version = "=4.6.0", features = ["derive"] }
directories = "=6.0.0"
humantime = "=2.3.0"
rusqlite = { version = "=0.39.0", features = ["bundled"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
time = { version = "=0.3.47", features = ["formatting"] }

[dev-dependencies]
assert_cmd = "=2.2.0"
predicates = "=3.1.4"
tempfile = "=3.27.0"
